# firefox-session-ui-gpui

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
icons/: sources.txt
src/: host.rs  main.rs
