[package]
name = "firefox-session-ui-gpui"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
repository = "https://github.com/Lej77/firefox-session-ui-gpui"

[features]
default = ["real_data"]

# Disable this feature to see fake data for faster compile times:
real_data = [
    "dep:firefox_session_data",
    "dep:tokio",
    "dep:serde_json",
]

# Support more html to PDF converters (increases binary size):
html_to_pdf_all = ["firefox_session_data?/html_to_pdf_all"]

webview = ["gpui-component/webview", "dep:wry"] # TODO: maybe preview HTML using this

[dependencies]
gpui = "0.2.2" # GUI Core
gpui-component = { version = "0.3.0" } # GUI Components
wry = { version = "0.53.3", package = "lb-wry", optional = true } # Web view
rust-embed = { version = "8", features = ["interpolate-folder-path"] } # Include icon assets
anyhow = "1"

rfd = "0.15.0" # File prompts
either = "1.11.0" # Used in public API of firefox_session_data
serde_json = { version = "1.0.116", optional = true } # Used to parse session data into the type exported by firefox_session_data
firefox_session_data = { git = "http://github.com/Lej77/firefox_session_data.git", tag = "v0.1.3", optional = true, features = ["windows-gui"] }
raw-window-handle = "0.6.2" # Used to set parent for file prompts (freezes parent window while they are open)
tokio = { version = "1.37.0", features = ["rt-multi-thread"], optional = true } # Offload heavy tasks to thread pool

# Windows:
[build-dependencies]
winresource = "0.1.20" # Executable icon on Windows
